recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:12: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
  avance()
        ^